; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/brocade/bna/extr_bfa_msgq.c_bfa_msgq_init_rsp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/brocade/bna/extr_bfa_msgq.c_bfa_msgq_init_rsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_msgq = type { i32, i32 }
%struct.bfi_mbmsg = type { i32 }

@CMDQ_E_INIT_RESP = common dso_local global i32 0, align 4
@RSPQ_E_INIT_RESP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_msgq*, %struct.bfi_mbmsg*)* @bfa_msgq_init_rsp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_msgq_init_rsp(%struct.bfa_msgq* %0, %struct.bfi_mbmsg* %1) #0 {
  %3 = alloca %struct.bfa_msgq*, align 8
  %4 = alloca %struct.bfi_mbmsg*, align 8
  store %struct.bfa_msgq* %0, %struct.bfa_msgq** %3, align 8
  store %struct.bfi_mbmsg* %1, %struct.bfi_mbmsg** %4, align 8
  %5 = load %struct.bfa_msgq*, %struct.bfa_msgq** %3, align 8
  %6 = getelementptr inbounds %struct.bfa_msgq, %struct.bfa_msgq* %5, i32 0, i32 1
  %7 = load i32, i32* @CMDQ_E_INIT_RESP, align 4
  %8 = call i32 @bfa_fsm_send_event(i32* %6, i32 %7)
  %9 = load %struct.bfa_msgq*, %struct.bfa_msgq** %3, align 8
  %10 = getelementptr inbounds %struct.bfa_msgq, %struct.bfa_msgq* %9, i32 0, i32 0
  %11 = load i32, i32* @RSPQ_E_INIT_RESP, align 4
  %12 = call i32 @bfa_fsm_send_event(i32* %10, i32 %11)
  ret void
}

declare dso_local i32 @bfa_fsm_send_event(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
